# freed-decorder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  vcpkg.json
cmake/: FetchOscpp.cmake
src/: app.cpp  app.h  main.cpp
src/freed/: freed_protocol.cpp  freed_protocol.h  freed_receiver.cpp  freed_receiver.h
src/gui/: dx11_backend.cpp  dx11_backend.h  gui_manager.cpp  gui_manager.h
src/osc/: osc_sender.cpp  osc_sender.h
src/utils/: network_utils.cpp  network_utils.h
